PEC1 v0.0.7 - optimización imagenes y js diferido

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
             src="/node_modules/lite-youtube-embed/src/lite-yt-embed.js"
         ></script>
 
+        <!--======= #AMP-IMG =======-->
+        <script async src="https://cdn.ampproject.org/v0.js"></script>
+
         <!--======= #FAVICON =======-->
         <link rel="icon" href="/src/assets/images/global/favicon/favicon.ico" />
         <title>EdimburGo!</title>
@@ -39,12 +42,21 @@
         <!--======= #MAIN =======-->
         <main>
             <section class="section" id="home-section">
-                <img
+                <!--<img
                     class="section__background section__background--opacity-008"
                     src="/src/assets/images/home/edimburgo-home-background.jpg.webp"
                     alt="Imagen de la sección home"
                     loading="lazy"
-                />
+                />-->
+                <amp-img
+                    class="section__background section__background--opacity-008"
+                    src="/src/assets/images/home/edimburgo-home-background.jpg.webp"
+                    alt="Imagen de la sección home"
+                    width="1024"
+                    height="1024"
+                    layout="responsive"
+                >
+                </amp-img>
                 <span class="section__shadow"></span>
 
                 <div class="section__container o-container o-grid">
@@ -67,12 +79,22 @@
 
                     <div class="section__cards o-grid section__cards--grid">
                         <article class="section__card">
-                            <img
+                            <!--<img
                                 class="section__card-img"
                                 src="/src/assets/images/home/castle-home-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                            />-->
+                            <amp-img
+                                class="section__card-img"
+                                src="/src/assets/images/home/castle-home-card.jpg.webp"
+                                alt=""
+                                loading="lazy"
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">
                                 Castillo de Edimburgo
                             </h3>
@@ -80,12 +102,17 @@
                         </article>
 
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/home/holyrood-palace-home-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            >
+                            </amp-img>
+
                             <h3 class="section__card-title">
                                 Palacio de Holyroodhouse
                             </h3>
@@ -93,12 +120,16 @@
                         </article>
 
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/home/arthurs-seat-home-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">
                                 Asiento de Arturo
                             </h3>
@@ -106,12 +137,16 @@
                         </article>
 
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/home/st-andrews-day-home-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">
                                 Día de San Andrés
                             </h3>
@@ -126,12 +161,16 @@
                     class="section__container o-container o-grid section__container--grid"
                 >
                     <div class="section__data section__data--left">
-                        <img
+                        <amp-img
                             class="section__background section__background--opacity-006"
                             src="/src/assets/images/history/history-background.jpg.webp"
                             alt="Imagen de la sección home"
                             loading="lazy"
-                        />
+                            width="1024"
+                            height="856"
+                            layout="responsive"
+                        ></amp-img>
+
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title section__title--left">
@@ -164,12 +203,16 @@
             <section class="section" id="patrimony-section">
                 <div class="section__container o-container o-grid">
                     <div class="section__data">
-                        <img
+                        <amp-img
                             class="section__background section__background--opacity-004"
                             src="/src/assets/images/patrimony/patrimony-background.jpg.webp"
                             alt="Imagen de la sección home"
                             loading="lazy"
-                        />
+                            width="1024"
+                            height="1024"
+                            layout="responsive"
+                        ></amp-img>
+
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title">Patrimonio</h2>
@@ -190,12 +233,16 @@
                         class="section__cards o-grid section__cards--grid-dos home"
                     >
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/home/castle-home-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">
                                 Patrimonio urbano
                             </h3>
@@ -203,12 +250,16 @@
                         </article>
 
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/home/arthurs-seat-home-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">
                                 Patrimonio natural
                             </h3>
@@ -216,12 +267,16 @@
                         </article>
 
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/home/st-andrews-day-home-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">
                                 Patrimonio inmaterial
                             </h3>
@@ -235,12 +290,16 @@
                     class="section__container o-container o-grid section__container--grid-dos"
                 >
                     <div class="section__data section__data--left">
-                        <img
+                        <amp-img
                             class="section__background section__background--opacity-004"
                             src="/src/assets/images/gastronomy/gastronomy-background.jpg.webp"
                             alt="Imagen de la sección home"
                             loading="lazy"
-                        />
+                            width="1024"
+                            height="1024"
+                            layout="responsive"
+                        ></amp-img>
+
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title section__title--left">
@@ -264,34 +323,47 @@
                         class="section__cards o-grid section__cards--grid-tres"
                     >
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/gastronomy/restaurants-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">Restaurantes</h3>
                             <span class="section__card-shadow"></span>
                         </article>
 
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/gastronomy/pubs-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            ></amp-img>
+
                             <h3 class="section__card-title">Pubs</h3>
                             <span class="section__card-shadow"></span>
                         </article>
 
                         <article class="section__card">
-                            <img
+                            <amp-img
                                 class="section__card-img"
                                 src="/src/assets/images/gastronomy/food-card.jpg.webp"
                                 alt=""
                                 loading="lazy"
-                            />
+                                width="600"
+                                height="400"
+                                layout="responsive"
+                            >
+                            </amp-img>
+
                             <h3 class="section__card-title">
                                 Productos tradicionales
                             </h3>
@@ -304,12 +376,16 @@
             <section class="section" id="events-section">
                 <div class="section__container o-container o-grid">
                     <div class="section__data">
-                        <img
+                        <amp-img
                             class="section__background section__background--opacity-008"
                             src="/src/assets/images/events/events-background.jpg.webp"
                             alt="Imagen de la sección home"
                             loading="lazy"
-                        />
+                            width="1024"
+                            height="605"
+                            layout="responsive"
+                        ></amp-img>
+
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title">Eventos</h2>
