PEC1 v0.0.8 - optimización (reversión amp-img)

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
             src="/node_modules/lite-youtube-embed/src/lite-yt-embed.js"
         ></script>
 
-        <!--======= #AMP-IMG =======-->
-        <script async src="https://cdn.ampproject.org/v0.js"></script>
+        <!--======= #AMP-IMG (No aplicado, pero rendimiento) =======-->
+        <!-- <script async src="https://cdn.ampproject.org/v0.js"></script> -->
 
         <!--======= #FAVICON =======-->
         <link rel="icon" href="/src/assets/images/global/favicon/favicon.ico" />
@@ -42,13 +42,13 @@
         <!--======= #MAIN =======-->
         <main>
             <section class="section" id="home-section">
-                <!--<img
+                <img
                     class="section__background section__background--opacity-008"
                     src="/src/assets/images/home/edimburgo-home-background.jpg.webp"
                     alt="Imagen de la sección home"
                     loading="lazy"
-                />-->
-                <amp-img
+                />
+                <!--<amp-img
                     class="section__background section__background--opacity-008"
                     src="/src/assets/images/home/edimburgo-home-background.jpg.webp"
                     alt="Imagen de la sección home"
@@ -56,7 +56,7 @@
                     height="1024"
                     layout="responsive"
                 >
-                </amp-img>
+                </amp-img>-->
                 <span class="section__shadow"></span>
 
                 <div class="section__container o-container o-grid">
@@ -79,22 +79,12 @@
 
                     <div class="section__cards o-grid section__cards--grid">
                         <article class="section__card">
-                            <!--<img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/home/castle-home-card.jpg.webp"
-                                alt=""
+                                alt="Castillo de Edimburgo"
                                 loading="lazy"
-                            />-->
-                            <amp-img
-                                class="section__card-img"
-                                src="/src/assets/images/home/castle-home-card.jpg.webp"
-                                alt=""
-                                loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Castillo de Edimburgo
                             </h3>
@@ -102,17 +92,12 @@
                         </article>
 
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/home/holyrood-palace-home-card.jpg.webp"
-                                alt=""
+                                alt="Palacio de Holyrood"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            >
-                            </amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Palacio de Holyroodhouse
                             </h3>
@@ -120,16 +105,12 @@
                         </article>
 
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/home/arthurs-seat-home-card.jpg.webp"
-                                alt=""
+                                alt="Asiento de Arturo"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Asiento de Arturo
                             </h3>
@@ -137,16 +118,12 @@
                         </article>
 
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/home/st-andrews-day-home-card.jpg.webp"
-                                alt=""
+                                alt="Celebración de San Andrés"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Día de San Andrés
                             </h3>
@@ -161,16 +138,12 @@
                     class="section__container o-container o-grid section__container--grid"
                 >
                     <div class="section__data section__data--left">
-                        <amp-img
+                        <img
                             class="section__background section__background--opacity-006"
                             src="/src/assets/images/history/history-background.jpg.webp"
-                            alt="Imagen de la sección home"
+                            alt="Imagen de la sección historia"
                             loading="lazy"
-                            width="1024"
-                            height="856"
-                            layout="responsive"
-                        ></amp-img>
-
+                        />
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title section__title--left">
@@ -203,16 +176,12 @@
             <section class="section" id="patrimony-section">
                 <div class="section__container o-container o-grid">
                     <div class="section__data">
-                        <amp-img
+                        <img
                             class="section__background section__background--opacity-004"
                             src="/src/assets/images/patrimony/patrimony-background.jpg.webp"
-                            alt="Imagen de la sección home"
+                            alt="Imagen de la sección patrimonio"
                             loading="lazy"
-                            width="1024"
-                            height="1024"
-                            layout="responsive"
-                        ></amp-img>
-
+                        />
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title">Patrimonio</h2>
@@ -233,16 +202,12 @@
                         class="section__cards o-grid section__cards--grid-dos home"
                     >
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/home/castle-home-card.jpg.webp"
-                                alt=""
+                                alt="Patrimonio urbano representado por el castillo de Edimburgo"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Patrimonio urbano
                             </h3>
@@ -250,16 +215,12 @@
                         </article>
 
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/home/arthurs-seat-home-card.jpg.webp"
-                                alt=""
+                                alt="Patrimonio natural representado por el asiento de Arturo"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Patrimonio natural
                             </h3>
@@ -267,16 +228,12 @@
                         </article>
 
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/home/st-andrews-day-home-card.jpg.webp"
-                                alt=""
+                                alt="Patrimonio inmaterial representado por el día de San Andrés"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Patrimonio inmaterial
                             </h3>
@@ -290,16 +247,12 @@
                     class="section__container o-container o-grid section__container--grid-dos"
                 >
                     <div class="section__data section__data--left">
-                        <amp-img
+                        <img
                             class="section__background section__background--opacity-004"
                             src="/src/assets/images/gastronomy/gastronomy-background.jpg.webp"
-                            alt="Imagen de la sección home"
+                            alt="Imagen de la sección gastronomía"
                             loading="lazy"
-                            width="1024"
-                            height="1024"
-                            layout="responsive"
-                        ></amp-img>
-
+                        />
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title section__title--left">
@@ -323,47 +276,34 @@
                         class="section__cards o-grid section__cards--grid-tres"
                     >
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/gastronomy/restaurants-card.jpg.webp"
-                                alt=""
+                                alt="Restaurante"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">Restaurantes</h3>
                             <span class="section__card-shadow"></span>
                         </article>
 
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/gastronomy/pubs-card.jpg.webp"
-                                alt=""
+                                alt="Pub"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            ></amp-img>
-
+                            />
                             <h3 class="section__card-title">Pubs</h3>
                             <span class="section__card-shadow"></span>
                         </article>
 
                         <article class="section__card">
-                            <amp-img
+                            <img
                                 class="section__card-img"
                                 src="/src/assets/images/gastronomy/food-card.jpg.webp"
-                                alt=""
+                                alt="Productos escoceses"
                                 loading="lazy"
-                                width="600"
-                                height="400"
-                                layout="responsive"
-                            >
-                            </amp-img>
-
+                            />
                             <h3 class="section__card-title">
                                 Productos tradicionales
                             </h3>
@@ -376,16 +316,12 @@
             <section class="section" id="events-section">
                 <div class="section__container o-container o-grid">
                     <div class="section__data">
-                        <amp-img
+                        <img
                             class="section__background section__background--opacity-008"
                             src="/src/assets/images/events/events-background.jpg.webp"
-                            alt="Imagen de la sección home"
+                            alt="Imagen de la sección eventos"
                             loading="lazy"
-                            width="1024"
-                            height="605"
-                            layout="responsive"
-                        ></amp-img>
-
+                        />
                         <span class="section__shadow"></span>
 
                         <h2 class="section__title">Eventos</h2>
